code fixed well

--- a/health.html
+++ b/health.html
@@ -90,7 +90,7 @@
       <h3 class="text-white">Read other topics</h3>
       <div>
           <div class="px-4 py-3 ">
-              <a href="health.html" class="btn btn-primary">Health & Wellness</a>  
+              <a href="academics.html" class="btn btn-primary">Academics</a>  
           </div>
           <div class="px-4 py-3 ">
               <a href="careers.html" class="btn btn-primary">Careers</a>  
