--- a/careers.html
+++ b/careers.html
@@ -92,7 +92,7 @@
                     <a href="health.html" class="btn btn-primary">Health & Wellness</a>  
                 </div>
                 <div class="px-4 py-3 ">
-                    <a href="careers.html" class="btn btn-primary">Careers</a>  
+                    <a href="academics.html" class="btn btn-primary">Academics</a>  
                 </div>
                 <div class="px-4 py-3 ">
                     <a href="personal-development.html" class="btn btn-primary">Personal development</a> 
