--- a/events.html
+++ b/events.html
@@ -51,249 +51,143 @@
         </nav>
   </div>
     <!-- heading container -->
-    <div class="px-4 py-3 bg-danger">
-      <div class="bg-primary row">
-        <div class="col events-head-cont">
-            <h3 class="mx-auto">Our Events</h3>
-        </div>
+  <!-- events banner -->
+  <div class="d-flex justify-content-center">
+    <div class="shadow bg-secondary shadow-lg p-2 mb-3 bg-body rounded">
+      <h4 class="lead display-4 bg-body text-dark p-2 fw-bold ">
+        Catch  up on these events to unlock your great potential
+      </h4>
     </div>
-    </div>
+  </div> 
 
-  <!--   events categories section -->
-    <div class="px-4 py-3">
-        <div class="row">
-            <div class="col-4">
-                <div class="card w-50">
-                    <div class="card-body">
-                      <h5 class="card-title">Past events</h5>
-                      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                      <a href="#past-events" class="btn btn-primary">Button</a>
-                    </div>
-                  </div>
+  <!--  events categories section -->
+    <div class="px-4 py-3 g-3">
+      <div class="row g-4 events-holder-cont pb-2 justify-content-evenly">
+        <div class="col">
+          <div class="card" style="width: 18rem;">
+            <img src="banner-photo.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
-            <div class="col-4">
-                <div class="card w-50">
-                    <div class="card-body">
-                      <h5 class="card-title">Current events</h5>
-                      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                      <a href="#current-events" class="btn btn-primary">Button</a>
-                    </div>
-                  </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card" style="width: 18rem;">
+            <img src="banner-photo.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
-            <div class="col-4">
-                <div class="card w-50">
-                    <div class="card-body">
-                      <h5 class="card-title">Upcoming events</h5>
-                      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                      <a href="#upcoming-events" class="btn btn-primary">Button</a>
-                    </div>
-                  </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card" style="width: 18rem;">
+            <img src="banner-photo.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
+          </div>
         </div>
-    </div>
- <!--    events gallery -->
- <div class="px-4 py-3">
-    <div>
-        <div class="col events-head-cont pb-3">
-            <h3 class="mx-auto">View our gallery</h3>
-        </div>
-    </div>
-    <div>
-        <div class="row gallery-cont">
-            <div class="col-6">
-                <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-indicators ">
-                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                    </div>
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img src="banner-photo.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                          <h5>First slide label</h5>
-                          <p>Some representative placeholder content for the first slide.</p>
-                        </div>
-                      </div>
-                      <div class="carousel-item">
-                        <img src="banner-photo.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                          <h5>Second slide label</h5>
-                          <p>Some representative placeholder content for the second slide.</p>
-                        </div>
-                      </div>
-                      <div class="carousel-item">
-                        <img src="banner-photo.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                          <h5>Third slide label</h5>
-                          <p class="text-danger">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, laborum!.</p>
-                        </div>
-                      </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
-                    </button>
-                  </div>
+        <div class="col d-lg-none">
+          <div class="card" style="width: 18rem;">
+            <img src="banner-photo.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
+          </div>
         </div>
+      </div>
+      <div class="row g-4 events-holder-cont d-none d-md-flex">
+        <div class="col">
+          <div class="card" style="width: 18rem;">
+            <img src="banner-photo.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Being yourself</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">View event</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card" style="width: 18rem;">
+            <img src="banner-photo.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card" style="width: 18rem;">
+            <img src="banner-photo.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col d-lg-none">
+          <div class="card" style="width: 18rem;">
+            <img src="banner-photo.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
- 
- </div>
-
-<!--  section for past events -->
-<div class="px-4 py-3" id="past-events">
-    <div class="col events-head-cont">
-        <h3 class="mx-auto">Past events</h3>
-    </div>
-    <div class="row justify-content-evenly gx-2">
-        <div class="col-3">
-            <div class="card" style="width: 18rem;">
-                <img src="banner-photo.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Home of mercy childrens home visit</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">More about this event</a>
-                </div>
-              </div>
-        </div>
-        <div class="col-3">
-            <div class="card" style="width: 18rem;">
-                <img src="banner-photo.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Home of mercy childrens home visit</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">More about this event</a>
-                </div>
-              </div>
-        </div>
-        <div class="col-3">
-            <div class="card" style="width: 18rem;">
-                <img src="banner-photo.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Home of mercy childrens home visit</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">More about this event</a>
-                </div>
-              </div>
-        </div>
-    </div>
-</div>
-
-<!-- section for current events -->
-<div class="px-4 py-3 border-2 border-top border-dark border-bottom" id="current-events" >
-    <div class="col events-head-cont">
-        <h3 class="mx-auto">Current events</h3>
-    </div>
-    <div class="row justify-content-evenly gx-2">
-        <div class="col-3">
-            <div class="card" style="width: 18rem;">
-                <img src="banner-photo.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Home of mercy childrens home visit</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">More about this event</a>
-                </div>
-              </div>
-        </div>
-        <div class="col-3">
-            <div class="card" style="width: 18rem;">
-                <img src="banner-photo.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Home of mercy childrens home visit</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">More about this event</a>
-                </div>
-              </div>
-        </div>
-        <div class="col-3">
-            <div class="card" style="width: 18rem;">
-                <img src="banner-photo.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Home of mercy childrens home visit</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">More about this event</a>
-                </div>
-              </div>
-        </div>
-    </div>
-</div>
-
-<!-- section for upcoming events -->
-<div class="px-4 py-3" id="upcoming-events">
-    <div class="col events-head-cont">
-        <h3 class="mx-auto">Upcoming events</h3>
-    </div>
-    <div class="row justify-content-evenly gx-2">
-        <div class="col-3">
-            <div class="card" style="width: 18rem;">
-                <img src="banner-photo.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Home of mercy childrens home visit</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">More about this event</a>
-                  <a href="#" class="btn btn-primary mt-2">Book slot</a>
-                </div>
-              </div>
-        </div>
-        <div class="col-3">
-            <div class="card" style="width: 18rem;">
-                <img src="banner-photo.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Home of mercy childrens home visit</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">More about this event</a>
-                  <a href="#" class="btn btn-primary mt-2">Book slot</a>
-                </div>
-              </div>
-        </div>
-        <div class="col-3">
-            <div class="card" style="width: 18rem;">
-                <img src="banner-photo.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Home of mercy childrens home visit</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">More about this event</a>
-                  <a href="#" class="btn btn-primary mt-2">Book slot</a>
-                </div>
-              </div>
-        </div>
-    </div>
-</div>
-
-<!-- banner for events recordings -->
-<div class="px-4 py-3 bg-dark text-primary intro-cont">
-    <h3>Missed an event? We got you covered!</h3>
-    <ol>
-        <li>step 1 Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
-        <li>step 2 Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-        <li>step 3 Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-        <li>step 4 Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
-        <li>step 5 Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
-    </ol>
-</div>
 <!-- Newsletter to get events notification -->
-<div class="px-4 py-3 bg-danger text-primary intro-cont">
-    <h3>Sign up for our Newsletter so you never miss an event!</h3>
-    <div class="row intro-cont">
-        <div class="col-12">
-            <div class="input-group">
-              <input type="email" class="form-control" placeholder="Enter your email">
-              <span class="input-group-btn">
-              <button class="btn btn-dark" type="submit">Subscribe</button>             
-            </div>
+  <!-- events banner -->
+  <div class=" justify-content-center margin-c">
+    <div class="shadow bg-secondary shadow-lg p-2 mb-3 bg-body rounded">
+      <h4 class="lead display-4 bg-body text-dark p-2 fw-bold ">
+        Never miss an Event! Get notified in your email.
+      </h4>
+      <div class="d-flex justify-content-center">
+        <!--modal to open email sign up form -->
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary fs-5" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+  Notify me of events
+</button>
+<!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title h2 fw-bolder" id="staticBackdropLabel">Never miss an event again!</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="col">
+          <p class="h3 text-dark">Get notifications of all upcoming events, both physical and virtual in your email.</p>
+          <div class="input-group">
+            <input type="email" class="form-control" placeholder="Enter your email">
+            <span class="input-group-btn">
+            <button class="btn btn-dark" type="submit">submit</button>
+            </span>
+          </div>
         </div>
-        <div class="col-12 pt-4">
-            <div>
-                <img src="banner-photo.jpg" class="img-fluid" alt="">             
-            </div>
-        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Close</button>        
+      </div>
     </div>
+  </div>
 </div>
+      </div>      
+    </div>
+  </div> 
 <!-- social media links -->
 <div class="px-4 py-3 bg-danger border-bottom border-dark border-2">
   <div class="row bg-danger">
