--- a/financial.html
+++ b/financial.html
@@ -20,7 +20,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active fs-5 btn btn-primary" aria-current="page" href="index.html">Home</a>
+                  <a class="nav-link active fs-5" aria-current="page" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link  active fs-5" href="about.html">About</a>
@@ -97,7 +97,7 @@
                 <a href="personal-development.html" class="btn btn-primary">Personal development</a> 
             </div>
             <div class="px-4 py-3 ">
-                <a href="financial.html" class="btn btn-primary">Financial literacy</a>
+                <a href="academics.html" class="btn btn-primary">Academics</a>
             </div>             
             </div>
       </div>
