--- a/personal-development.html
+++ b/personal-development.html
@@ -95,7 +95,7 @@
               <a href="careers.html" class="btn btn-primary">Careers</a>  
           </div>
           <div class="px-4 py-3 ">
-              <a href="personal-development.html" class="btn btn-primary">Personal development</a> 
+              <a href="academics.html" class="btn btn-primary">Academics</a> 
           </div>
           <div class="px-4 py-3 ">
               <a href="financial.html" class="btn btn-primary">Financial literacy</a>
