--- a/contact-us.html
+++ b/contact-us.html
@@ -52,15 +52,15 @@
 </div>
 
 <!-- contact us container -->
-<div class="px-4 py-3 bg-primary  gx-2">
+<div class="px-4 py-3 bg-primary  gx-2" >
     <div class="row">
         <div class="col-md-6 bg-info p-2">
             <div class="contact-us-title">
                 <h3>Contact us</h3>
             </div>
             <div class="contact-us-message">
-                <p>Do you have an issue we can address to improve the way we serve you? Don't hesitate to let us know!</p>
-                <p>Our customer support team will get back to ypu within 24 hours.</p>
+                <p class="my-font">Do you have an issue we can address to improve the way we serve you? Don't hesitate to let us know!</p>
+                <p class="my-font">Our customer support team will get back to you within 24 hours.</p>
             </div>
         </div>
         <div class="col-md-6 bg-danger p-2">
@@ -75,7 +75,7 @@
                   <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                 </div>
                 <div class="mb-3">
-                    <label for="msg-text-area" class="form-label">Example textarea</label>
+                    <label for="msg-text-area" class="form-label">Type your message below</label>
                     <textarea class="form-control" id="msg-text-area" rows="3"></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
@@ -145,9 +145,9 @@
     <div class="col-8 col-md-4 col-lg-5">
       <h4 class="text-white">Contact</h4>
       <ul class="margin-c">
-        <li class="text-white"><span class=" text-primary"><i class="bi bi-geo-alt-fill"></i></span>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni, illum?</li>
-        <li class="text-white mb-2"><span class="pe-1 text-primary"><i class="bi bi-telephone-fill"></i></span>(+254) 712-345-678</li>
-        <li class="text-white"><span class="pe-1 text-primary"><i class="bi bi-envelope-at-fill"></i></span>emailtous@email.com</li>
+        <li class="text-white"><address><span class=" text-primary"><i class="bi bi-geo-alt-fill"></i></span>P.O BOX,1418-90200 KITUI</address></li>
+        <li class="text-white mb-2"><span class="pe-1 text-primary"><i class="bi bi-telephone-fill"></i></span>(+254) 793764993</li>
+        <li class="text-white"><a href="#" class="text-white"><i class="bi bi-envelope-at-fill"></i> <span class="pe-1">Email us</span></a></li>
       </ul>
     </div>
     <div class="col-12 col-md-6  col-lg-6">
