--- a/health.html
+++ b/health.html
@@ -181,9 +181,9 @@
       <div class="col-8 col-md-4 col-lg-5">
         <h4 class="text-white">Contact</h4>
         <ul class="margin-c">
-          <li class="text-white"><span class=" text-primary"><i class="bi bi-geo-alt-fill"></i></span>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni, illum?</li>
-          <li class="text-white mb-2"><span class="pe-1 text-primary"><i class="bi bi-telephone-fill"></i></span>(+254) 712-345-678</li>
-          <li class="text-white"><span class="pe-1 text-primary"><i class="bi bi-envelope-at-fill"></i></span>emailtous@email.com</li>
+          <li class="text-white"><address><span class=" text-primary"><i class="bi bi-geo-alt-fill"></i></span>P.O BOX,1418-90200 KITUI</address></li>
+          <li class="text-white mb-2"><span class="pe-1 text-primary"><i class="bi bi-telephone-fill"></i></span>(+254) 793764993</li>
+          <li class="text-white"><a href="#" class="text-white"><i class="bi bi-envelope-at-fill"></i> <span class="pe-1">Email us</span></a></li>
         </ul>
       </div>
       <div class="col-12 col-md-6  col-lg-6">
