--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
     <div class="row bg-danger">
       <div class="col-2">
         <div>
-          <i class="bi bi-facebook"></i>
+          <a class="text-white" style="width:3rem" href="https://www.facebook.com/people/Stephen-Carlwenzi/61559666406263/?__cft__[0]=AZUxC5O7nmuAISkRSa9t7WW2wSyxW40zH_yd8iwndmdzhQv_jj9POHL71bnWC0qwk0UkS65oew88JIb_Z60GBj6rzR-Nnx2dKsWSwQ7hLOOcz79cqwfuDj3gW3Ic34UGLSWIipHj-pmWDB44RS1RWzU3QDxR3bDfJU13i0k09y4YWTy5Tr0CRbSTG9Cp-_ITL2Ayo-SQnx0z05vhUTQ3NMk2&__tn__=-UC%2CP-R"><i class="bi bi-facebook"></i></a>          
         </div>
       </div>
       <div class="col-2">
@@ -583,28 +583,28 @@
       </div>
       <div class="col-2">
         <div>
-          <i class="bi bi-tiktok"></i>
+          <a href="https://www.tiktok.com/@stephen_carl20?is_from_webapp=1&sender_device=pc"><i class="bi bi-tiktok"></i></a>          
         </div>
       </div>
       <div class="col-2">
         <div>
-          <a href="youtube.com"><i class="bi bi-youtube"></i></a>        
+          <a class="bg-body d-flex" style="width:3rem" href="www.linkedin.com/in/stephenkalwenzi"><i class="bi bi-linkedin" width:100% ></i></a>        
         </div>
       </div>
       <div class="col-2">
         <div>
-          <i class="bi bi-twitter-x"></i>
+          <a href="https://x.com/kalwenzi"><i class="bi bi-twitter-x"></i></a>          
         </div>
       </div>
       <div class="col-2">
         <div>
-          <i class="bi bi-instagram"></i>
+          <a href="https://www.instagram.com/achiv_more/#"><i class="bi bi-instagram"></i></a>          
         </div>
       </div>
     </div>
   </div>
   <!-- footer links and newsletter sign up -->
-<div class="bg-danger px-4 py-3">
+  <div class="bg-danger px-4 py-3">
     <div class="row gx-2">    
       <div class="col-4 col-md-2 col-lg-1 ps-0 fs-5">
         <h3 class="text-white">Links</h3>
@@ -626,9 +626,9 @@
       <div class="col-8 col-md-4 col-lg-5">
         <h4 class="text-white">Contact</h4>
         <ul class="margin-c">
-          <li class="text-white"><span class=" text-primary"><i class="bi bi-geo-alt-fill"></i></span>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni, illum?</li>
-          <li class="text-white mb-2"><span class="pe-1 text-primary"><i class="bi bi-telephone-fill"></i></span>(+254) 712-345-678</li>
-          <li class="text-white"><span class="pe-1 text-primary"><i class="bi bi-envelope-at-fill"></i></span>emailtous@email.com</li>
+          <li class="text-white"><address><span class=" text-primary"><i class="bi bi-geo-alt-fill"></i></span>P.O BOX,1418-90200 KITUI</address></li>
+          <li class="text-white mb-2"><span class="pe-1 text-primary"><i class="bi bi-telephone-fill"></i></span>(+254) 793764993</li>
+          <li class="text-white"><a href="#" class="text-white"><i class="bi bi-envelope-at-fill"></i> <span class="pe-1">Email us</span></a></li>
         </ul>
       </div>
       <div class="col-12 col-md-6  col-lg-6">
