--- a/secondary blogs/Academics/blog3.html
+++ b/secondary blogs/Academics/blog3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Academics</title>
+    <title>Mastering Your Studies: Effective Study Strategies for Academic Success</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -20,30 +20,30 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active fs-5" aria-current="page" href="index.html">Home</a>
+                    <a class="nav-link active fs-5" aria-current="page" href="/index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link  active fs-5" href="about.html">About</a>
+                    <a class="nav-link  active fs-5" href="/about.html">About</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active fs-5" href="events.html">Events</a>
+                    <a class="nav-link active fs-5" href="/events.html">Events</a>
                   </li>
                   <li class="nav-item dropdown active fs-5 text-white">
                     <a class="nav-link dropdown-toggle" href="learn.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Learn
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="financial.html">Financial</a></li>
-                      <li><a class="dropdown-item" href="personal-development.html">Personal development</a></li>
-                      <li><a class="dropdown-item" href="careers.html">Careers</a></li>
-                      <li><a class="dropdown-item text-primary fw-bold" href="academics.html">Academics</a></li>
-                      <li><a class="dropdown-item" href="health.html">Health & Wellness</a></li>
+                      <li><a class="dropdown-item" href="/financial.html">Financial</a></li>
+                      <li><a class="dropdown-item" href="/personal-development.html">Personal development</a></li>
+                      <li><a class="dropdown-item" href="/careers.html">Careers</a></li>
+                      <li><a class="dropdown-item text-primary fw-bold" href="/academics.html">Academics</a></li>
+                      <li><a class="dropdown-item" href="/health.html">Health & Wellness</a></li>
 <!--                       <li><hr class="dropdown-divider"></li>
                       <li><a class="dropdown-item" href="#">Something else here</a></li> -->
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active fs-5" href="contact-us.html">Contact</a>
+                    <a class="nav-link active fs-5" href="/contact-us.html">Contact</a>
                   </li>  
                 </ul>
               </div>
@@ -58,16 +58,67 @@
   </div>
   <div class="row">
       <div class="col-12 col-md-8">
-          <img src="banner-photo.jpg" class="img-fluid" alt="">
-          <h4>Blog title</h4>
-          <h5>Edited by <span>date and time</span> <span>duration of read</span></h5>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas, inventore sunt, quibusdam saepe vero vitae debitis at ipsum asperiores maxime delectus placeat earum laudantium, voluptates quis aut tenetur dolorum voluptatem ut ex dolore ipsam ea! Magni, repellat eos nobis aspernatur illum tenetur fuga vel quis autem blanditiis veniam et quibusdam neque reprehenderit vero omnis culpa ipsum. Quas beatae harum omnis debitis perferendis odit dolores optio laborum. Quod deserunt non maiores, laborum quidem expedita saepe dolores reiciendis molestiae, perspiciatis mollitia commodi hic beatae eum placeat illum id sequi quaerat minus officia quas architecto, iure labore itaque? Suscipit itaque vero adipisci soluta.                    
+          <img src="/banner-photo.jpg" class="img-fluid" alt="">
+          <h2>Mastering Your Studies: Effective Study Strategies for Academic Success</h2>
+          <h5 id="blog-editor-name" class="lead">By
+          </h5>
+          <h5 id="blog-post-date-and-time" class="lead">date and time</h5>
+          <h5 id="blog-read-time" class="lead">duration of read</h5>
+          <p> Achieving academic success requires more than just attending classes and completing assignments; it requires mastering the art of studying. With the right strategies and techniques, you can enhance your learning experience, retain information more effectively, and ultimately excel in your academic pursuits. In this article, we'll explore a variety of effective study strategies that you can incorporate into your routine to optimize your learning outcomes.                 
           </p>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti, ea. Expedita porro aperiam, molestiae earum sit assumenda beatae corporis harum voluptatibus fuga asperiores veniam, vel mollitia ut soluta quam! Quas.                    
+          <h4>
+            Understanding Effective Study Strategies
+          </h4>
+          <p>Effective study strategies are techniques and methods designed to help students learn and retain information efficiently. These strategies not only improve comprehension but also enhance memory recall, critical thinking skills, and overall academic performance. Here are some key study strategies to consider:                    
           </p>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti, ea. Expedita porro aperiam, molestiae earum sit assumenda beatae corporis harum voluptatibus fuga asperiores veniam, vel mollitia ut soluta quam! Quas.                    
+          <ol id="blog-content-ordered-list" class="margin-c">
+            <li>
+                <span id="bold-main-point" class="fw-bold">Active Learning: </span><span id="unbold-point-content">Instead of passively absorbing information, engage with the material actively. This can involve techniques such as summarizing key points, asking questions, and participating in discussions.</span>
+            </li>
+            <li>
+                <span id="bold-main-point" class="fw-bold">Spaced Repetition: </span><span id="unbold-point-content">Reviewing material over spaced intervals—rather than cramming all at once—has been shown to improve long-term retention. Use flashcards or review sheets to revisit concepts at regular intervals.</span>
+            </li>
+            <li>
+                <span id="bold-main-point" class="fw-bold">Mind Mapping: </span><span id="unbold-point-content">Create visual representations of concepts using mind maps. This technique helps organize information in a hierarchical structure, making it easier to understand and remember complex topics.</span>
+            </li>
+            <li>
+                <span id="bold-main-point" class="fw-bold">Practice Retrieval: </span><span id="unbold-point-content">Actively recall information from memory through practice quizzes or self-testing. Retrieval practice strengthens memory recall and helps identify areas that require further review.</span>
+            </li>
+            <li>
+                <span id="bold-main-point" class="fw-bold">Chunking: </span><span id="unbold-point-content">Break down large amounts of information into smaller, more manageable chunks. Focus on mastering one chunk at a time before moving on to the next, gradually building a solid foundation of knowledge.</span>
+            </li>
+          </ol>
+          <h4>
+            Tips for Implementing Effective Study Strategies
+          </h4>
+          <p>
+            Now that we've covered some key study strategies, let's explore how to implement them effectively:
           </p>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti, ea. Expedita porro aperiam, molestiae earum sit assumenda beatae corporis harum voluptatibus fuga asperiores veniam, vel mollitia ut soluta quam! Quas.                    
+          <ol id="blog-content-ordered-list" class="margin-c">
+            <li><span id="bold-main-point" class="fw-bold">Set Clear Goals: </span><span id="unbold-point-content">Define your study objectives and break them down into actionable steps. Having clear goals will keep you focused and motivated throughout your study sessions.</span>
+            </li>
+            <li><span id="bold-main-point" class="fw-bold">
+                Create a Distraction-Free Environment: 
+            </span><span id="unbold-point-content">Find a quiet, comfortable space where you can concentrate without interruptions. Turn off your phone, close unnecessary tabs, and minimize distractions to maximize productivity.</span>
+            </li>
+            <li><span id="bold-main-point" class="fw-bold">Establish a Routine: </span><span id="unbold-point-content">
+                Develop a consistent study routine that fits your schedule and preferences. Dedicate specific times each day to studying, and stick to your schedule to build a habit of regular study sessions.
+            </span>
+            </li>
+            <li><span id="bold-main-point" class="fw-bold">Use a Variety of Resources: </span><span id="unbold-point-content">Supplement your textbook readings with additional resources such as online lectures, academic journals, or multimedia materials. Exploring different perspectives and formats can deepen your understanding of the subject matter.
+            </span>
+            </li>
+            <li><span id="bold-main-point" class="fw-bold">Take Breaks and Practice Self-Care: </span><span id="unbold-point-content">Incorporate regular breaks into your study sessions to prevent burnout and maintain focus. Use breaks to relax, recharge, and engage in activities that promote well-being, such as exercise or mindfulness meditation.</span>
+            </li>
+          </ol>
+          <h5>
+            The Importance of Reflection and Adaptation
+          </h5>
+          <p>
+            As you implement these study strategies, remember that learning is a dynamic process that requires continuous reflection and adaptation. Pay attention to what works best for you and be open to adjusting your approach as needed. Experiment with different techniques, solicit feedback from peers or instructors, and make adjustments based on your observations.
+          </p>
+          <p>
+            By adopting effective study strategies and cultivating a mindset of curiosity and perseverance, you can unlock your full academic potential and achieve success in your educational endeavors. So, roll up your sleeves, dive into your studies, and embrace the journey of learning with confidence and determination. With the right strategies and a commitment to continuous improvement, you can conquer any academic challenge that comes your way.
           </p>
           <a href="#" class="btn btn-secondary mb-4">View video tutorial</a>
       </div>
@@ -78,10 +129,10 @@
               <h3>Related posts</h3>
               <div class="">
                 <ul class="margin-c">
-                  <li><a href="/secondary blogs/Academics/blog1.html" class="fs-3 text-white">Related post. Lorem ipsum dolor sit amet.</a></li>
-                  <li><a href="/secondary blogs/Academics/blog2.html" class="fs-3 text-white">Related post</a></li>
-                  <li><a href="/secondary blogs/Academics/blog3.html" class="fs-3 text-white">Related post</a></li>
-                  <li><a href="/secondary blogs/Academics/blog4.html" class="fs-3 text-white">Related post</a></li>
+                  <li><a href="#" class="fs-3 text-white">Related post. Lorem ipsum dolor sit amet.</a></li>
+                  <li><a href="#" class="fs-3 text-white">Related post</a></li>
+                  <li><a href="#" class="fs-3 text-white">Related post</a></li>
+                  <li><a href="#" class="fs-3 text-white">Related post</a></li>
                 </ul>
               </div>
           </div>
